# smsgo-sdk-python

./: CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: buy_credits.py  check_balance.py  check_status.py  configure_webhook.py  receive_dlr_webhook.py  send_otp.py  send_sms.py
src/smsgo/: __init__.py  client.py  errors.py
tests/: test_client.py
