[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smsgo"
version = "0.1.0"
description = "SDK oficial Python para a API de SMS da SMSGo — envie SMS, OTP e campanhas no Brasil em minutos."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "SMSGo" }]
keywords = ["sms", "sms-api", "otp", "2fa", "brasil", "smsgo", "twilio-alternative", "totalvoice-alternative"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://smsgo.com.br"
Repository = "https://github.com/SMSFy/smsgo-python"
Issues = "https://github.com/SMSFy/smsgo-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/smsgo"]
